fixed text alignment

--- a/main.css
+++ b/main.css
@@ -851,7 +851,8 @@ input {
     #how-text {
         grid-column: 2/5;
         grid-row: 1/2;
-        padding: 5rem 0rem 0rem 0rem;
+        padding: 0rem 0rem;
+        margin-top: 5rem;
     }
 
     #how-image{
